  * chpst.c, pathexec.h, pathexec_env.c, pathexec_run.c, runsvdir.c,
    sgetopt.c, sgetopt.h, subgetopt.c, subgetopt.h, sv.c, svlogd.c,
    utmpset.c: fix compilation warning(s): -Wincompatible-pointer-types-
    discards-qualifiers (thx Z. Liu, Debian, and others).
  * x86cpuid.c: fix error: call to undeclared library function '...'; ISO
    C99 and later do not support implicit function declarations
    [-Wimplicit-function-declaration] (thx Z. Liu, Debian, and others).
  * chpst.c, pathexec_run.c, prot.c, seek_set.c: fix error: call to
    undeclared function '...'; ISO C99 and later do not support implicit
    function declarations [-Wimplicit-function-declaration] (thx Z. Liu).
  * tryflock.c, trysgact.c, trysgprm.c, trywaitp.c: fix error: type
    specifier missing, defaults to 'int'; ISO C99 and later do not support
    implicit int [-Wimplicit-int] (thx Z. Liu and others).
  * chkshsgr.c, trycpp.c, trypoll.c, tryshsgr.c, tryulong64.c: fix error:
    call to undeclared function '...'; ISO C99 and later do not support
    implicit function declarations [-Wimplicit-function-declaration] (thx
    Z. Liu and others).

2.1.2
Sun, 10 Aug 2014 18:01:54 +0000
  * doc/index.html: reorder, cleanup links to distributions; add Linux
    from Scratch, Finnix, VServer.
  * sv.c: properly format status command's output on failure cases.
  * sv.c: support optional LSB init script actions reload and
    try-restart.
  * man/sv.8: "sv exit" does not send a TERM signal to the log service
    (thx Jonathan Nieder).
  * fmt_ptime.c: 64 bits time_t fix for svlogd (tnx Jérémie
    Courrèges-Anglas).
  * sv.c: fix typo that may lead to wrong output from sv when reporting
    status of multiple service directories.
  * doc/index.html: add deepOfix Mail Server to list of distributions
    that include runit (thx Debayan Banerjee).
  * doc/useinit.html: update description on how to use with upstart
    (thx Gabriel de Perthuis).